# BirthdayBot

./: .env.example  .gitignore  Cargo.toml  README.md  birthdays.db  cross-compile-env.sh  lang.json  shell.nix
migrations/: 20200718111257_birthdays.sql
src/: commands.rs  database.rs  globals.rs  lang.rs  lookup.rs  macros.rs  main.rs
username_lookup/: .gitignore  client.py  client.sh  config.json.example  initialize.sh  server.py  start_server.sh
