[package]
name = "birthday-bot"
authors = [ "hex0x0000 <valentinopeggi99@gmail.com>" ]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.10.1", features = [
    "macros",
    "auto-send",
    "cache-me",
    "throttle",
] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "io-util",
    "time"
] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
json = "0.12.4"
lazy_static = "1.4.0"
anyhow = "1.0.58"
dotenv = "0.15.0"
async_once = "0.2.6"
chrono = "0.4"
[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
