[package]
name = "birthday-bot"
authors = ["hex0x0000 <hex0x0000@protonmail.com>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = [
    "macros",
    "cache-me",
    "throttle",
] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.20.1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
	"sync"
] }
async-sqlite = "0.2"
json = "0.12.4"
anyhow = "1.0.58"
dotenv = "0.15.0"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
